[package]
name = "electron-hardener"
version = "0.1.0"
authors = ["ComplexSpaces <complexspacescode@gmail.com>", "1Password"]
description = "Utility to remove features from Electron that modify runtime behavior"
keywords = ["electron", "security", "hardening"]
repository = "https://github.com/1Password/electron-hardener"
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "electron-hardener"
path = "src/bin/main.rs"

[dependencies]
regex = { version = "1", default-features = false, features = ["std", "perf"] }

[dev-dependencies]
enum-iterator = "0.6"